staging/vote-staging-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vote-staging-http
  namespace: staging
spec:
  parentRefs:
    - name: instavote-staging-gtw
      sectionName: http
      kind: Gateway
  hostnames:
    - vote-staging.192.168.71.240.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vote
          namespace: staging
          port: 80
